crates/rustmat-macros/tests/ui/fail_non_string.rs
use rustmat_macros::matlab_fn;

#[matlab_fn(name = 123)]
fn foo() {}

fn main() {}
